# MH-Z19B-CO2-Sensor-Serial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.properties
examples/usage/: usage.ino
src/: CMakeLists.txt  MH-Z19B-CO2-Sensor-Serial.h
tests/: CMakeLists.txt  MockSerialInterface.h  tests.cpp
